Login & authentication (Tests)
(missing finish test, validate username, pwd)

--- a/auth/templates/auth/validate_email.html
+++ b/auth/templates/auth/validate_email.html
@@ -85,7 +85,7 @@
         />
       </div>
       <div class="btn-change-email">
-        <form action="{{url_for('auth.email_validation')}}">
+        <form action="{{url_for('auth.validate_email')}}">
           <button
             type="submit"
             class="btn btn-primary confirm-button"
