--- a/auth/templates/auth/register.html
+++ b/auth/templates/auth/register.html
@@ -83,7 +83,7 @@
                 <div class="button-container">
                   <div class="card-button">
                     <form
-                      action="{{url_for('auth.email_validation')}}"
+                      action="{{url_for('auth.validate_email')}}"
                       method="get"
                     >
                       <button
