--- a/auth/templates/auth/validate_password.html
+++ b/auth/templates/auth/validate_password.html
@@ -1,11 +1,11 @@
-{% extends 'authentication_pages/base.html' %} {% block heading %}
+{% extends 'auth/base.html' %} {% block heading %}
 <link
   rel="stylesheet"
-  href="{{ url_for('authentication_pages.static', filename='authentication_pages/css/base.css') }}"
+  href="{{ url_for('auth.static', filename='auth/css/base.css') }}"
 />
 <link
   rel="stylesheet"
-  href="{{ url_for('authentication_pages.static', filename='authentication_pages/css/validate-password.css') }}"
+  href="{{ url_for('auth.static', filename='auth/css/validate-password.css') }}"
 />
 {% endblock %} {% block content %}
 <main class="vh-70">
@@ -84,5 +84,5 @@
     </div>
   </div>
 </main>
-<script src="{{ url_for('authentication_pages.static', filename='authentication_pages/scripts/validate-password.js')}}"></script>
+<script src="{{ url_for('auth.static', filename='auth/scripts/validate-password.js')}}"></script>
 {% endblock %}
