--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -24,11 +24,7 @@
                   />
                   <br /><br />
                 </div>
-                <form
-                  class="mx-1 mx-md-4"
-                  method="post"
-                  action="{{url_for('auth.login')}}"
-                >
+                <form class="mx-1 mx-md-4" method="post" action="">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
@@ -72,7 +68,11 @@
                 {% endif %}
 
                 <a href="{{url_for('auth.register')}}"
-                  >Não tem um conta? Registre-se já!</a
+                  >Don't have an account? Register now!</a
+                >
+                <br />
+                <a href="{{url_for('auth.forgot_password')}}"
+                  >Forgot password?</a
                 >
               </div>
               <div
