--- a/catalog/templates/catalog/details.html
+++ b/catalog/templates/catalog/details.html
@@ -2,6 +2,10 @@
 
 {% block title %}Game Store - Product Detail {% endblock %}
 
+{% block heading %}
+<link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css')}}/index.css">
+{% endblock %}
+
 {% block content %}
 <div class="container">
   <div class="row">
@@ -43,19 +47,18 @@
                         <span>{{game_dict['tags'][0]}}</span>
                       </div>
                       <ul>
-                        <li><i class="fa fa-star"></i>{{game_dict['reviews']['stars']}}</li>
-                        <li><i class="fa fa-download"></i>{{game_dict['downloads']}}</li>
-                        <li><i class="fa-solid fa-dollar-sign feature-price"></i>{{game_dict["pricing"]}}</li>
+                        <li><i id="product-price" class="fa-solid fa-dollar-sign feature-price"></i>
+                          <h4 class="feature-price">{{game_dict["pricing"]}}</h4>
+                        </li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="right-info">
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
-                        <li><i class="fa fa-server"></i> 36GB</li>
-                        <li><i class="fa fa-gamepad"></i> Action</li>
+                        <li><i class="fa fa-star"></i>{{game_dict['reviews']['stars']}}</li>
+                        <li><i class="fa fa-download"></i>{{game_dict['downloads']}}</li>
+                        <li><i class="fa fa-gamepad"></i>{{game_dict['tags'][0]}}</li>
                       </ul>
                     </div>
                   </div>
@@ -105,10 +108,13 @@
               <div class="col-lg-6">
                 <div class="item">
                   <img src="{{game['images']['thumb_image']}}" alt="" class="templatemo-item">
-                  <h4>{{game['name']}}</h4><span>{{game['tag'][0]}}</span>
+                  <a href="{{url_for('catalog.details', game_id=game['id'])}}" <h4>{{game['name']}}</h4>
+                    <span>{{game['tags'][0]}}</span>
+                  </a>
                   <ul>
                     <li><i class="fa fa-star"></i>{{game['reviews']['stars']}}</li>
                     <li><i class="fa fa-download"></i>{{game['downloads']}}</li>
+                    <li><i class="fa-solid fa-dollar-sign"></i>{{game["pricing"]}}</li>
                   </ul>
                 </div>
               </div>
