--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -6,8 +6,8 @@ Game Store | Catalog
 
 {% endblock %}
 
-
 {% block heading %}
+<link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css/custom.css')}}">
 {% endblock %}
 
 
@@ -46,12 +46,15 @@ Game Store | Catalog
 
                 <div class="col-lg-3 col-sm-6">
                   <div class="item">
-                    <img src="{{game['images']['thumb_image']}}" alt="">
+                    <img class="product-thumb" src="{{game['images']['thumb_image']}}" alt="">
                     <!-- TODO Exibir todas as tags, atualmente, apeans uma é exibida -->
-                    <h4>{{game.name}}<br><span>{{game.tags[0]}}</span></h4>
+                    <a href="{{url_for('catalog.details', game_id=game.game_id)}}">
+                      <h4>{{game.name}}<br><span>{{game.tags[0]}}</span></h4>
+                    </a>
                     <ul>
-                      <li><i class="fa fa-star"></i> 4.8</li>
-                      <li><i class="fa fa-download"></i> 2.3M</li>
+                      <li><i class="fa fa-star"></i>{{game['reviews']['stars']}}</li>
+                      <li><i class="fa fa-download"></i>{{game['downloads']}}</li>
+                      <li><i class="fa-solid fa-dollar-sign"></i>{{game["pricing"]}}</li>
                     </ul>
                   </div>
                 </div>
@@ -74,98 +77,56 @@ Game Store | Catalog
             <div class="heading-section">
               <h4><em>Your Gaming</em> Library</h4>
             </div>
+            {% if current_user.is_authenticated %}
+            {% for game_index in range(games_count) %}
+
             <div class="item">
               <ul>
                 <li>
-                  <img src="{{url_for('catalog.static', filename='catalog/images')}}/game-01.jpg" alt=""
-                    class="templatemo-item" />
+                  <img src="{{user_games[game_index]['images'][thumb_image]}}" alt="" class="templatemo-item" />
                 </li>
                 <li>
-                  <h4>Dota 2</h4>
-                  <span>Sandbox</span>
+                  <h4>{{user_games[game_index]['name']}}</h4>
+                  <span>{{user_games[game_index]['tags'][0]}}</span>
                 </li>
                 <li>
                   <h4>Date Added</h4>
-                  <span>24/08/2036</span>
-                </li>
-                <li>
-                  <h4>Hours Played</h4>
-                  <span>634 H 22 Mins</span>
+                  <span>{{current_user.my_games[game_index].added_at}}</span>
                 </li>
                 <li>
                   <h4>Currently</h4>
                   <span>Downloaded</span>
                 </li>
                 <li>
+                  {% if current_user.my_games[game_index].is_downloaded %}
                   <div class="main-border-button border-no-active">
                     <a href="#">Donwloaded</a>
                   </div>
-                </li>
-              </ul>
-            </div>
-            <div class="item">
-              <ul>
-                <li>
-                  <img src="{{url_for('catalog.static', filename='catalog/images')}}/game-02.jpg" alt=""
-                    class="templatemo-item" />
-                </li>
-                <li>
-                  <h4>Fortnite</h4>
-                  <span>Sandbox</span>
-                </li>
-                <li>
-                  <h4>Date Added</h4>
-                  <span>22/06/2036</span>
-                </li>
-                <li>
-                  <h4>Hours Played</h4>
-                  <span>740 H 52 Mins</span>
-                </li>
-                <li>
-                  <h4>Currently</h4>
-                  <span>Downloaded</span>
-                </li>
-                <li>
+                  {% else %}
                   <div class="main-border-button">
                     <a href="#">Donwload</a>
                   </div>
+                  {% endif %}
                 </li>
               </ul>
             </div>
-            <div class="item last-item">
-              <ul>
-                <li>
-                  <img src="{{url_for('catalog.static', filename='catalog/images')}}/game-03.jpg" alt=""
-                    class="templatemo-item" />
-                </li>
-                <li>
-                  <h4>CS-GO</h4>
-                  <span>Sandbox</span>
-                </li>
-                <li>
-                  <h4>Date Added</h4>
-                  <span>21/04/2036</span>
-                </li>
-                <li>
-                  <h4>Hours Played</h4>
-                  <span>892 H 14 Mins</span>
-                </li>
-                <li>
-                  <h4>Currently</h4>
-                  <span>Downloaded</span>
-                </li>
-                <li>
-                  <div class="main-border-button border-no-active">
-                    <a href="#">Donwloaded</a>
-                  </div>
-                </li>
-              </ul>
+
+            {% endfor %}
+
+            <div class="col-lg-12">
+              <div class="main-button">
+                <a href="profile.html">View Your Library</a>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="main-button">
-              <a href="profile.html">View Your Library</a>
-            </div>
+
+            {% else %}
+            <ul>
+              <li>
+                <h4><em id="login-link"><a href="{{url_for('auth.login')}}">Sign in</a></em> to see your library</h4>
+              </li>
+            </ul>
+            {% endif %}
+
           </div>
         </div>
         <!-- ***** Gaming Library End ***** -->
