--- a/auth/templates/auth/edit_profile.html
+++ b/auth/templates/auth/edit_profile.html
@@ -146,9 +146,9 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="password" class="form-label">Password</label>
-                                                    <input type="password" id="password" name="password"
-                                                        placeholder="strong password" class="form-control form-input"
-                                                        autocomplete="off">
+                                                    <input type="password" id="password" name="password" placeholder=""
+                                                        required class="form-control form-input" autocomplete="off">
+                                                    <h6>Password required to save</h6>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class="col-sm-10">
