Fixing error on Edit Profile & fixing urls issues

--- a/auth/templates/auth/base.html
+++ b/auth/templates/auth/base.html
@@ -1,81 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Store - Login</title>
 
-    <!-- google fonts-->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Rubik"
-    />
-    <!-- JQuery cdn-->
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
-      type="text/javascript"
-    ></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Game Store - Login</title>
 
-    <!-- Local stylesheets importing starts here-->
-    <link
-      rel="stylesheet"
-      href="{{ url_for('auth.static', filename='auth/css/style.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('auth.static', filename='auth/css/reset-css.css')}}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('auth.static', filename='auth/css/base.css')}}"
-    />
-    <!-- Bootstrap css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
+  <!-- google fonts-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik" />
+  <!-- JQuery cdn-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 
-    {% block heading %}{% endblock %}
-  </head>
+  <!-- Local stylesheets importing starts here-->
+  <link rel="stylesheet" href="{{ url_for('auth.static', filename='auth/css/style.css') }}" />
+  <link rel="stylesheet" href="{{url_for('auth.static', filename='auth/css/reset-css.css')}}" />
+  <link rel="stylesheet" href="{{url_for('auth.static', filename='auth/css/base.css')}}" />
+  <!-- Bootstrap css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
-        <a class="navbar-brand" href="{{url_for('auth.home')}}">
-          <img
-            class="logo"
-            src="{{url_for('auth.static', filename='auth/images/logo-nobg-nodesc.png')}}"
-          />
-        </a>
-      </nav>
-    </header>
+  {% block heading %}{% endblock %}
+</head>
 
-    {% block content %}{% endblock %}
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+      <img class="logo" src="{{url_for('auth.static', filename='auth/images/logo-nobg-nodesc.png')}}" />
+      </a>
+    </nav>
+  </header>
 
-    <!-- Local scripts import starts here -->
-    <script src="{{ url_for('auth.static', filename='auth/scripts/script.js')}}"></script>
+  {% block content %}{% endblock %}
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- JavaScript Bundle with Popper Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  </body>
+  <!-- Local scripts import starts here -->
+  <script src="{{ url_for('auth.static', filename='auth/scripts/script.js')}}"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- JavaScript Bundle with Popper Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+</body>
+
 </html>
